# Clubvel-app

./: .gitignore  auth_flow_test.py  backend_auth_test.py  backend_critical_fixes_test.py  backend_notification_test.py  backend_test.py  error_test.py  multi_role_test.py  test_result.md  validation_test.py
.emergent/: emergent.yml
backend/: .env  README.md  pyproject.toml  requirements.txt  server.py
backend/services/: bank_feed_service.py  notification_service.py
clubvel-website/: index.html
frontend/: .env  GoogleService-Info.plist  app.json  eas.json  google-services.json  index.js  package.json
frontend/app/: _layout.tsx  auth.tsx  index.tsx  onboarding.tsx  privacy-policy.tsx
frontend/app/(member)/: _layout.tsx  about.tsx  alerts.tsx  claims.tsx  home.tsx  notifications.tsx  privacy.tsx  profile.tsx  proofs.tsx  support.tsx  trust-score.tsx
frontend/app/(member)/club/: [id].tsx
frontend/app/(treasurer)/: _layout.tsx  about.tsx  claims.tsx  club-detail.tsx  contributions.tsx  dashboard.tsx  members.tsx  my-contributions.tsx  notifications.tsx  privacy.tsx  profile.tsx  reports.tsx  support.tsx
frontend/app/(treasurer)/club/: [id].tsx
frontend/app/club/: [id].tsx
frontend/components/: AdBanner.tsx  AppHeader.tsx  StatusPill.tsx
frontend/constants/: Colors.ts
frontend/contexts/: AuthContext.tsx
frontend/scripts/: create_centered_icon.py  create_matching_icon.py  create_optical_icon.py
frontend/services/: adMobService.ts  firebaseAuth.ts  pdfReportService.ts
memory/: MONGODB_ATLAS_SETUP.md  test_credentials.md
