[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clubvel-backend"
version = "1.0.0"
description = "Clubvel Stokvel Management Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "python-dotenv>=1.0.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.2",
    "python-jose>=3.3.0",
    "pydantic>=2.5.3",
    "slowapi>=0.1.9",
    "cryptography>=41.0.0",
    "certifi>=2024.2.2",
]
